--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,20 @@
+.container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+body,
+html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+#root {
+  min-height: 100vh; /* Ensures it fills the view point height */
+  display: flex;
+  flex-group: column;
+}
 .App {
   font-family: sans-serif;
   text-align: center;
