--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,17 @@
- {
+html,
+body,
+#root {
   margin: 0;
   padding: 0;
   height: 100%;
+  width: 100%;
 }
 
 #root {
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
+
 .App {
   text-align: center;
   padding: 1rem;
